updating index.html added wifi manager added new endpoints

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,5 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	me-no-dev/ESPAsyncTCP@^1.2.2
 	me-no-dev/ESP Async WebServer@^1.2.3
-	adafruit/Adafruit NeoPixel@^1.10.7
+	adafruit/Adafruit NeoPixel@^1.11.0
+	tzapu/WiFiManager@^0.16.0
